@@ -12,6 +12,7 @@
 	all : added Std.format
 	js : trace() output fallback on console.log if no id="haxe:trace"
 	all : ensure that Std.is(2.0,Int) returns true on all platforms
+	js : replaced $closure by function.$bind + change in output format
 
 2011-09-25: 2.08
 	js : added js.JQuery
